@@ -8,6 +8,8 @@ BIOM-Format 1.1.2-dev (changes since BIOM-Format 1.1.2 go here)
 New Features
 ------------
 
+* Table.collapseObservationsByMetadata and Table.collapseSamplesByMetadata now have an additional argument, include_collapsed_metadata, which allows the user to either include or exclude collapsed metadata in the collapsed table.
+
 Changes
 -------
 
